--- a/package.json
+++ b/package.json
@@ -11,39 +11,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "^8.2.1",
-    "@angular/platform-browser": "^8.2.1",
-    "@angular/platform-browser-dynamic": "^8.2.1",
-    "@angular/router": "^8.2.1",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "ngx-bootstrap": "^5.1.1",
+    "@angular/animations": "~8.2.14",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/pwa": "^0.901.9",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "~8.2.14",
+    "bootstrap": "^4.5.0",
+    "idb": "^5.0.4",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^5.1.0",
     "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.3",
-    "@angular/cli": "^8.2.1",
-    "@angular/compiler-cli": "^8.1.3",
-    "@angular/language-service": "^8.2.1",
-    "@types/jasmine": "^3.3.16",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "^0.803.27",
+    "@angular/cli": "^8.3.27",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^3.5.10",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "source-map-explorer": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
+    "source-map-explorer": "^2.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
